--- a/css/home/home.css
+++ b/css/home/home.css
@@ -40,16 +40,186 @@
 	color: #333;
 }
 #item1 .list .box .text{
-	/* margin-top: 0.05rem; */
 	font-size: 0.18rem;
 	line-height: 0.18rem;
 	color: #666;
 	white-space: nowrap;
 }
+.publicBox>.title{
+	font-size: 0.3rem;
+	color: #333;
+	text-align: center;
+}
 #item2{
+	width: 100%;
 	background-color: #fff;
 	margin-top: 0.15rem;
+	height: 3.8rem;
+	padding: 0.2rem 0.24rem;
+	box-sizing: border-box;
 }
 #item2 .title{
 	font-size: 0.3rem;
+}
+#item2 .item2-swiper {
+	width: 100%;
+	height: 3rem;
+	margin-left: auto;
+	margin-right: auto;
+	border: 1px solid red;
+}
+#item2 .item2-swiper .swiper-slide {
+	text-align: center;
+	border: 1px solid red;
+	font-size: 18px;
+	background: #fff;
+	/* Center slide text vertically */
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+}
+#item3{
+	width: 100%;
+	background-color: #fff;
+	margin-top: 0.15rem;
+	height: 4.2rem;
+	padding: 0.2rem 0.24rem;
+	box-sizing: border-box;
+}
+#item3 .item3-content{
+	display: flex;
+}
+#item3 .item3-content .list-box{
+	height: 2.5rem;
+	box-shadow: 0 0 0.06rem rgba(0,0,0,.16);
+	flex: 1;
+	margin-right: 0.3rem;
+}
+#item3 .item3-content .list-box:last-child{
+	margin-right: 0;
+}
+#item3 .item3-content .list-box img{
+	width: 100%;
+	height: 1.4rem;
+}
+#item3 .item3-content .list-box .content{
+	padding: 0.1rem 0.05rem;
+	box-sizing: border-box;
+}
+
+#item3 .item3-content .list-box .title{
+	font-size: 0.24rem;
+	line-height: 0.26rem;
+	color: #4d4d4d;
+	white-space: normal;
+	width: 3.3rem;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+#item3 .item3-content .list-box .description{
+	font-size: 0.16rem;
+	line-height:0.24rem;
+	color: #999;
+	width: 3.3rem;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	margin-top: 0.05rem;
+}
+#item3 .item3-content .list-box span{
+	color: #FF121E;
+	margin-right: 0.1rem;
+	font-size: 0.16rem;
+	line-height:0.16rem;
+	white-space: nowrap;
+}
+#item3 .item3-content .list-box s{
+	font-size: 0.14rem;
+	line-height: 0.14rem;
+	color: #ccc;
+	white-space: nowrap;
+}
+
+.lxcontent3{
+	width: 100%;
+	margin: 0 auto;
+	height: 4.3rem;
+}
+
+.lxcontent3 .lxitem{
+	width: 3.8rem;
+	height: 3.3rem;
+	background: #fff;
+}
+
+.lxcontent3 .lxitem img{
+	width: 100%;
+	height: 3.3rem;
+}
+
+#item4{
+	width: 100%;
+	background-color: #fff;
+	margin-top: 0.15rem;
+	height: 5.6rem;
+	padding: 0.2rem 0.24rem;
+	box-sizing: border-box;
+}
+#item5{
+	width: 100%;
+	background-color: #fff;
+	margin-top: 0.15rem;
+	height: 4.5rem;
+	padding: 0.2rem 0.24rem;
+	box-sizing: border-box;
+}
+#item5 .item5content{
+	display: flex;
+	flex-wrap: nowrap;
+}
+#item5 .item5content .list{
+	flex: 1;
+	height: 2.7rem;
+	margin-right: 0.6rem;
+}
+#item5 .item5content .list img{
+	width: 1.8rem;
+	height: 1.8rem;
+	display: block;
+	margin: 0 auto;
+}
+#item5 .item5content .list .name{
+	text-align: center;
+	font-size: 0.3rem;
+	color: #4D4D4D;
+}
+#item5 .item5content .list .title{
+	text-align: center;
+	font-size: 0.22rem;
+	color: #4D4D4D;
+}
+#item5 .item5content .list:last-child{
+	margin-right: 0;
+}
+#item6{
+	width: 100%;
+	background-color: #fff;
+	margin-top: 0.15rem;
+	height: 2.7rem;
+	padding: 0.2rem 0.24rem;
+	box-sizing: border-box;
+}
+#item6 img{
+	width: 100%;
+	margin-top: 0.2rem;
+	height: 1.4rem;
 }
