--- a/css/home/home.css
+++ b/css/home/home.css
@@ -49,6 +49,16 @@
 	font-size: 0.3rem;
 	color: #333;
 	text-align: center;
+	display: flex;
+	flex-wrap: nowrap;
+	margin: 0.1rem auto;
+}
+.publicBox>.title>i{
+	display: block;
+	width: 0.15rem;
+	height: 0.15rem;
+	margin: 0.15rem;
+	background: url("../../images/home/dian.png") no-repeat center;
 }
 #item2{
 	width: 100%;
@@ -66,26 +76,25 @@
 	height: 3rem;
 	margin-left: auto;
 	margin-right: auto;
-	border: 1px solid red;
+}
+#item2 .item2-swiper .swiper-slide img{
+	width: 0.7rem;
+	height: 0.7rem;
+	margin: 0 auto;
+	display: block;
+}
+#item2 .item2-swiper .swiper-slide .text{
+	text-align: center;
+	width: 100%;
+	white-space: nowrap;
+	font-size: 0.24rem;
+	color: #4E8CEE;
 }
 #item2 .item2-swiper .swiper-slide {
-	text-align: center;
-	border: 1px solid red;
-	font-size: 18px;
+	height:40%;
+	font-size: 0.18rem;
 	background: #fff;
-	/* Center slide text vertically */
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	-webkit-align-items: center;
-	align-items: center;
+	/*display: flex;*/
 }
 #item3{
 	width: 100%;
@@ -94,6 +103,12 @@
 	height: 4.2rem;
 	padding: 0.2rem 0.24rem;
 	box-sizing: border-box;
+}
+#item3>.text{
+	text-align: center;
+	font-size: 0.26rem;
+	color: #666;
+	margin-bottom: 0.1rem;
 }
 #item3 .item3-content{
 	display: flex;
@@ -157,22 +172,33 @@
 
 .lxcontent3 .lxitem{
 	width: 3.8rem;
-	height: 3.3rem;
+	height: 4.3rem;
 	background: #fff;
 }
 
 .lxcontent3 .lxitem img{
 	width: 100%;
-	height: 3.3rem;
+	height: 4.3rem;
 }
 
 #item4{
 	width: 100%;
 	background-color: #fff;
 	margin-top: 0.15rem;
-	height: 5.6rem;
+	height:6.5rem;
 	padding: 0.2rem 0.24rem;
 	box-sizing: border-box;
+}
+#item4>img{
+	width: 5.2rem;
+	height: 0.26rem;
+	margin: 0 auto;
+	display: block;
+}
+#item4>.text{
+	font-size: 0.2rem;
+	color: #0069D2;
+	text-align: center;
 }
 #item5{
 	width: 100%;
@@ -181,6 +207,12 @@
 	height: 4.5rem;
 	padding: 0.2rem 0.24rem;
 	box-sizing: border-box;
+}
+#item5>.text{
+	font-size: 0.26rem;
+	color: #666;
+	text-align: center;
+	margin-bottom: 0.1rem;
 }
 #item5 .item5content{
 	display: flex;
@@ -201,6 +233,7 @@
 	text-align: center;
 	font-size: 0.3rem;
 	color: #4D4D4D;
+	margin-top: 0.1rem;
 }
 #item5 .item5content .list .title{
 	text-align: center;
