--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,32 @@
+.menu-container{
+	position: fixed;
+	top: 1.08rem;
+	background: #fff;
+	width: 3rem;
+	z-index: 100;
+	right: -3rem;
+	transition: all 500ms;
+	padding: 0.1rem 0;
+	box-sizing: border-box;
+	box-shadow: 0 0 0.06rem rgba(0,0,0,.16);
+}
+.menu-container>li,.menu-container>li>a{
+	height: 0.8rem;
+	font-size: 0.3rem;
+	padding-left: 0.2rem;
+	box-sizing: border-box;
+	position: relative;
+	width: 100%;
+	display: flex;
+	flex-wrap: nowrap;
+	color: #333;
+}
+.menu-container>li span{
+	position: absolute;
+	right: 0.3rem;
+	display: block;
+	color: #333;
+}
 .header-container{
   width: 100%;
   height: 1.08rem;
@@ -26,7 +55,7 @@
 	right: 0.2rem;
 }
 .swiper-container{
-	width: 100%;
+	width: 100%!important;
 	height: 3.4rem;
 }
 .swiper-container .swiper-slide{
