--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,11 @@
+.banner-container{
+	height: 2.4rem;
+	width: 100%;
+}
+.banner-container>img{
+	height: 2.4rem;
+	width: 100%;
+}
 .menu-container{
 	position: fixed;
 	top: 1.08rem;
