--- a/css/common.css
+++ b/css/common.css
@@ -71,6 +71,10 @@
 	background: #0056B3;
 	width: 100%;
 }
+.swiper-container .swiper-slide>img{
+	width: 100%;
+	height: 3.6rem;
+}
 .swiper-pagination {
 	top: 86%;
 }
