--- a/css/news/news.css
+++ b/css/news/news.css
@@ -33,9 +33,11 @@
 .news-container .newsBox:first-child{
     display: block;
 }
-.news-container .newsBox>li{
+.news-container .newsBox>li>a{
     display: flex;
     flex-wrap: nowrap;
+}
+.news-container .newsBox>li{
     width: 100%;
     margin: 0.15rem 0;
 }
